# Stash-MCP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  USAGE.md  alembic.ini  docker-compose.cloudflare.yml  docker-compose.dev-auth.yml  docker-compose.dev-idp.yml  docker-compose.search-local.yml  docker-compose.search-openai.yml  docker-compose.yml  manifest.json  pyproject.toml
.claude/: launch.json
.claude-plugin/: marketplace.json
.claude-plugin/plugins/stash-mcp/hooks/: hooks.json
.dev/: dex-config.yaml
.github/workflows/: build-extension.yml  ci.yml  docker-publish.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_auth_schema.py  0002_mcp_server_configs.py  0003_api_token_mcp_server_id.py  0004_drop_content_roots.py
content/: README.md
content/docs/: adr-0042-event-sourced-orders.md  readme.md  welcome.md
content/examples/: agent-instructions.md
docs/: cloudflare-auth0-deployment.md  deployment.md
docs/auth/: 01-persistence.md  02-providers-middleware.md  03-store-registry.md  04-routing.md  05-admin-cli.md  06-ui-clients.md  README.md
docs/mcp/: 01-tenant-admin.md  02-mcp-server-configs.md  03-token-scoping.md  04-runtime-enforcement.md  README.md
docs/store/: 00-overview.md  01-storage-backend.md  02-data-model.md  03-commit-protocol.md  04-tool-surface.md  05-import.md  06-garbage-collection.md  07-local-dev.md  08-phasing.md  09-open-questions.md
plugins/stash-mcp/: README.md
plugins/stash-mcp/.claude-plugin/: plugin.json
plugins/stash-mcp/skills/stash-mcp-usage/: SKILL.md
skills/stash-mcp/: .mcp.json
skills/stash-mcp/.claude-plugin/: plugin.json
stash_mcp/: __init__.py  __main__.py  api.py  config.py  errors.py  events.py  filesystem.py  frontend.py  git_backend.py  main.py  mcp_audit.py  mcp_listing.py  mcp_server.py  metrics.py  search.py  server.py  transactions.py  ui.py  web_server.py
stash_mcp/admin/: __init__.py  dependencies.py  routes.py
stash_mcp/auth/: __init__.py  api_token_provider.py  context.py  middleware.py  oidc_provider.py  principal.py  provider.py  routes.py  session_provider.py  sessions.py  tokens.py  users.py
stash_mcp/cli/: __init__.py  __main__.py  commands.py
stash_mcp/db/: __init__.py  engine.py  models.py  session.py
stash_mcp/routing/: __init__.py  context.py  mcp_server_resolver.py  store_resolver.py
stash_mcp/stores/: __init__.py  admin_ops.py  composite_filesystem.py  composite_store.py  layout.py  registry.py
stash_mcp/tenant_admin/: __init__.py  mcp_servers.py  routes.py
stash_ui/: index.html  package-lock.json  package.json  vite.config.ts
stash_ui/src/api/: auth.ts  client.ts  fetch.ts  mcpServers.ts  stores.ts
stash_ui/src/app/: App.tsx  StoreContext.tsx  mockData.ts  routes.tsx  types.ts
stash_ui/src/app/components/: Accordion.tsx  (+29 more)
stash_ui/src/styles/: index.css  theme.css
tests/: __init__.py  conftest.py  test_api.py  test_filesystem.py  test_git_backend.py  test_mcp_server.py  test_metrics.py  test_search.py  test_tool_scopes.py  test_transactions.py  test_ui.py
tests/admin/: conftest.py  test_admin_routes.py  test_me_stores_routes.py  test_oidc_routes.py  test_problem_details.py  test_token_routes.py
tests/auth/: _fake_idp.py  conftest.py  test_api_token_provider.py  test_config_validation.py  test_middleware.py  test_oidc_provider.py  test_session_cookies.py  test_session_provider.py  test_token_hashing.py  test_token_routes_mcp_server.py
tests/cli/: conftest.py  test_cli_commands.py
tests/db/: test_models_roundtrip.py
tests/mcp_server/: conftest.py  test_audit.py  test_broadcast.py  test_listing_middleware.py  test_runtime_tool_allowlist.py
tests/routing/: conftest.py  test_mcp_server_resolver.py  test_per_store_api.py  test_per_store_mcp.py  test_store_resolver.py
tests/stores/: test_composite_filesystem.py  test_layout.py  test_registry.py
tests/tenant_admin/: conftest.py  test_mcp_servers_routes.py  test_require_tenant_admin.py  test_stores_routes.py
(+13 files in other folders)
