[project]
name = "stash-mcp"
version = "0.1.0"
description = "A file-backed content server that exposes documents to AI agents via the Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Dylan Turnbull" }
]
keywords = ["mcp", "model-context-protocol", "content-server", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "markdown>=3.7",
    "tinyflux>=1.2.0",
    "aiofiles>=24.1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
]

[project.scripts]
stash-mcp = "stash_mcp.main:main"
stash-mcp-stdio = "stash_mcp.server:run"
stash-mcp-cli = "stash_mcp.cli:main"
stash-mcp-migrate = "alembic.config:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "numpy>=1.26.0",
    "asyncpg>=0.29.0",
]
postgres = [
    "asyncpg>=0.29.0",
]
search = [
    "numpy>=1.26.0",
    "pydantic-ai-slim[sentence-transformers]>=0.1.0",
]
search-openai = [
    "numpy>=1.26.0",
    "openai==2.21.0",
    "tiktoken==0.12.0",
    "pydantic-ai-slim[openai]>=0.1.0",
]
search-cohere = [
    "numpy>=1.26.0",
    "pydantic-ai-slim[cohere]>=0.1.0",
]
search-contextual = [
    "numpy>=1.26.0",
    "pydantic-ai-slim[sentence-transformers]>=0.1.0",
    "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stash_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"stash_mcp/static" = "stash_mcp/static"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"stash_mcp/ui.py" = ["E501"]
# Problem Details classes use semantic names (Forbidden, ETagMismatch, …)
# that intentionally don't end in "Error".
"stash_mcp/errors.py" = ["N818"]
# Test files import fixtures (auth_db, content_dir, _auth_config_defaults
# autouse) from sibling conftests so pytest discovers them, then use the
# same names as function parameters — ruff sees this as F811.
"tests/**" = ["F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
